[package]
name = "link-book-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
mongodb = "2.8.1"
rocket = "0.5.0"
serde = "1.0.197"

[workspace]
members = ["smart-pointers"]
